add search page

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "cookies-next": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
+    "next-nprogress-bar": "^2.4.7",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
