--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@vercel/analytics": "^1.5.0",
     "cookies-next": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
